welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:2: error: not found: value nbPas
nbPas = 0
^Program:3: error: not found: value dejafait
dejafait = 0
^