welcome.lessons.welcome.loopfor.LoopFor.scala.code
nbPas = 0
dejafait = 0

while (!estSurBiscuit) {
	avance()
}
	
